welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<-1 to 6) {
        ^Program:15: error: return outside method definition
    return true;
    ^